; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_afalg.c_afalg_set_iv_sk.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_afalg.c_afalg_set_iv_sk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmsghdr = type { i32, i32, i32 }
%struct.af_alg_iv = type { i32, i32 }

@SOL_ALG = common dso_local global i32 0, align 4
@ALG_SET_IV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cmsghdr*, i8*, i32)* @afalg_set_iv_sk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @afalg_set_iv_sk(%struct.cmsghdr* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.cmsghdr*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.af_alg_iv*, align 8
  store %struct.cmsghdr* %0, %struct.cmsghdr** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @SOL_ALG, align 4
  %9 = load %struct.cmsghdr*, %struct.cmsghdr** %4, align 8
  %10 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @ALG_SET_IV, align 4
  %12 = load %struct.cmsghdr*, %struct.cmsghdr** %4, align 8
  %13 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ALG_IV_LEN(i32 %14)
  %16 = call i32 @CMSG_LEN(i32 %15)
  %17 = load %struct.cmsghdr*, %struct.cmsghdr** %4, align 8
  %18 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.cmsghdr*, %struct.cmsghdr** %4, align 8
  %20 = call i64 @CMSG_DATA(%struct.cmsghdr* %19)
  %21 = inttoptr i64 %20 to %struct.af_alg_iv*
  store %struct.af_alg_iv* %21, %struct.af_alg_iv** %7, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load %struct.af_alg_iv*, %struct.af_alg_iv** %7, align 8
  %24 = getelementptr inbounds %struct.af_alg_iv, %struct.af_alg_iv* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load %struct.af_alg_iv*, %struct.af_alg_iv** %7, align 8
  %26 = getelementptr inbounds %struct.af_alg_iv, %struct.af_alg_iv* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @memcpy(i32 %27, i8* %28, i32 %29)
  ret void
}

declare dso_local i32 @CMSG_LEN(i32) #1

declare dso_local i32 @ALG_IV_LEN(i32) #1

declare dso_local i64 @CMSG_DATA(%struct.cmsghdr*) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
